--- a/styles/main.css
+++ b/styles/main.css
@@ -68,17 +68,15 @@ h3 {
   border-radius: 5%;
   margin: 5px;
   padding: 10px;
-}
-
-/* .shop__combo {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
-} */
-
-.thewell {
-  flex: 2;
+  width: 25%;
+  flex-basis: 20%;
 }
+
+/* .thewell {
+  flex: 3;
+} */
 
 .shop__info {
   list-style-type: none;
