--- a/styles/main.css
+++ b/styles/main.css
@@ -32,27 +32,20 @@ h3 {
 }
 
 /* NAVIGATION */
-.navbar__items {
-  background-color: #F4EBD0;
-  padding: 5px;
-  margin: 0;
-  list-style-type: none;
+.navbar {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: flex-end;  
-  gap: 30px;
-  font-size: 22px;
+  justify-content: space-between;
+  background-color:#F4EBD0;
+  height: 50px;
+}
+
+.navbar__items {
+  display: flex;
+  list-style-type: none;
+  width: 25%;
+  justify-content: space-around;
   align-items: center;
 }
-
-.navbar__item {
-  padding-right: 10px;
-}
-
-/* #one {
-  margin-right: auto;
-} */
 
 /* CAPSULES */
 .shops {
@@ -96,8 +89,6 @@ img {
 .navbar__img {
   height: 75px;
   width: 75px;
-  padding-left: 10px;
-  margin-right: auto;
 }
 
 
